# Python-Tg-Bot

./: .env  .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.py
bot/: bot.py
src/: main.py
src/bot/: bot.py
